# TP1_Reseau_Sockets

./: CMakeLists.txt  README.md
libSocket/: Connection.cpp  Connection.h  MotherClass.h  Network.cpp  Network.h  SocketManager.cpp  SocketManager.h  TCPConnection.cpp  TCPConnection.h  Terminal.cpp  Terminal.h  UDPConnection.cpp  UDPConnection.h  client.cpp  client.h  mainClient.cpp  mainServer.cpp  server.cpp  server.h
